Added Login Screenshot.png and additional comments to login.html

--- a/login.html
+++ b/login.html
@@ -1,8 +1,12 @@
+<!--Operator Login for UATSpace Program
+    writtten by: Brandon Ackerman
+    CSC102, 30 May 2021-->
+
 <!DOCTYPE html>
 <html>
 
 <head>
-    
+
     <script src="loginCode.js"></script>
 
     <title>
@@ -18,11 +22,16 @@
     <p id="loginStatus">
         Status of login...
     </p>
+    <!--Create a form for user input of first name, last name, and badge number-->
     <form id="creditSubmit" onsubmit="return false">
         First Name: <input type="text" id="fName" /> <br>
+        <!--create input for first name-->
         Last Name: <input type="text" id="lName" /> <br>
+        <!--create input for last name-->
         Badge Number: <input type="number" id="badgeID" /> <br>
+        <!--create input for badge number-->
         <input type="submit" onclick="checkCreds();" />
+        <!--create submit button, and on click run checkCreds()-->
 
     </form>
 </body>
